tests/paczka2/big_fuzzy/86924029.err
Error in line 19: oDVYhmz S410 1,8
Error in line 16: xiyKVdy S410 2,7
Error in line 17: b8gCSOYx0d S375 13,3
Error in line 20: oDVYhmz S700 80,3
Error in line 25: S700 S700 14,7
Error in line 35: 1SF0 S375 90,4
Error in line 44: WcLW2vpzc1 S410 9,3
Error in line 24: X1Uu S375 51,7
Error in line 52: 1SF0 S410 _9,3
Error in line 51: 1SF0 S375 11,4
Error in line 65: WcLW2vpzc1 S410 26,4
Error in line 67: WcLW2vpzc1 S553 67,2
Error in line 68: WcLW2vpzc1 S375 94,2
Error in line 56: oDVYhmz S700 14,7
Error in line 69: S700 S410 115,0
Error in line 55: 1SF0 S410 109,7
Error in line 81: oDVYhmz S375 55,1
Error in line 90: oDVYhmz S553 11,1
Error in line 100: b8gCSOYx0d S700 108,71
Error in line 104: WcLW2vpzc1 S375 117,69
Error in line 91: oDVYhmz S410 0,0
Error in line 108: 1SF0 S700 76,1
Error in line 116: b8gCSOYx0d S700 46,2
Error in line 123: xiyKVdy S410 7&,3
Error in line 124: xiyKVdy S410 14,9
Error in line 118: b8gCSOYx0d S375 83,7
Error in line 127: b8gCSOYx0d S410 25,0
Error in line 121: X1Uu S700 74,8
Error in line 122: S700 S375 60,5
Error in line 153: WcLW2vpzc1 S553 52,6
Error in line 165: oDVYhmz SJ75 0,5
Error in line 164: xiyKVdy S700 16,9
Error in line 148: b8gCSOYx0d S375 63,1
Error in line 174: X1Uu S375 4,64
Error in line 178: xiyKVdy S375 7,3
Error in line 143: oDVYhmz S375 8,3
Error in line 201: oDVYhmz S553 14,3
Error in line 194: S700 S553 61,0
Error in line 211: S700 S375 58,2
Error in line 213: 1SF0 S553 87,9
Error in line 218: oDVYhmz S375 55,8
Error in line 199: b8gCSOYx0d S410 32,3
Error in line 227: b8gCSOYx0d S553 61,0
Error in line 228: 1SF0 S375 92,6
Error in line 238: WcLW2vpzc1 S553 83,7
